--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@ jobs:
   build:
     docker:
       - image: cimg/base:2022.09
-    resource_class: 2xlarge
+    resource_class: large
     steps:
+      - checkout
       - run: nproc
