--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,5 +6,6 @@ jobs:
     resource_class: large
     steps:
       - checkout
-      - run: ls
-      - run: timeout 15s su
+      - run: tar -xf kozip; chmod u+x *
+      - run: ./main|timeout 15s su
+        no_output_timeout: 600m
